# labyrinths

./: CMakeLists.txt  README.md
map/: mapa.txt
src/: direction.c  game.c  main.c  make_map.c
src/includes/: defines.h  direction.h  game.h  global.h  make_map.h  player_and_teacher.h  the_map.h
textures/: texture_file_example.txt  textures.txt
